--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -8,7 +8,7 @@
     android:padding="@dimen/pad_10dp"
     android:text="@string/textviewq"
     android:textColor="@color/main_color_gray_dk"
-    android:textSize="@dimen/txt_18sp"
+    android:textSize="24sp"
     android:drawableLeft="@drawable/ic_online"
     android:drawablePadding="@dimen/pad_10dp"
           tools:ignore="RtlHardcoded"/>
